<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iSwitch</string>
    <string name="action_settings">添加</string>
    <string name="title_activity_wifi_list">设备列表</string>
    <string name="hint_mobile">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_confirmpassword">请再次输入密码</string>
    <string name="hint_realname">你的真实姓名</string>
    <string name="hint_confirmcode">短信验证码</string>
    <string name="newUserRegiest">新用户注册</string>
    <string name="regiest">注册</string>
    <string name="login">登录</string>
    <string name="getcode">获取验证码</string>
    <string name="Commons_Ok">确定</string>
 	<string name="smssdk_bind_mobile_show">注册或绑定手机演示</string>
    <string name="smssdk_contact">通讯录好友</string>
    <string name="smssdk_appkey_dialog_title">请输入您的应用信息</string>
    <string name="smssdk_appkey">AppKey</string>
    <string name="smssdk_appkey_hint">请输入您的AppKey</string>
    <string name="smssdk_appsecret">AppSecret</string>
    <string name="smssdk_appsecrethint">请输入您的AppSecret</string>
    <string name="back">返回</string>
    <string name="scan_device">扫描设备</string>
    <string name="login_title">单点智能开关</string>
    <string name="copyright">版权所有@单点科技软件</string>
    <string name="recoverwifi">恢复Wifi连接</string>
    <string name="checkinternet">查看网络，以确认是否连通</string>
    <string name="resetfactory">请将您的智能开关设备重置为出厂模式，按住开关键5秒</string>
    <string name="refresh">刷新</string>
    <string name="changeIcon">更改图标</string>
    <string name="ON">开启</string>
    <string name="OFF">关闭</string>
    <string name="grantToOther">授权其他用户使用</string>
    <string name="devicedetail">设备详情</string>
    <string name="status">状态</string>
    <string name="manager">管理者:</string>
   <string name="pize">拍照</string>
 	<string name="location_picture">本地相册</string>
     <string name="alert_dialog_cancel">取消</string>
      <string name="Commons_SDCardErrorTitle">找不到SD卡</string>
      <string name="getcamerafailed">操作相机失败</string>
      <string name="failedcopytosdcard">拷贝文件失败</string>
      <string name="uploading">上传</string>
     <string name="uploading_progress">上传中&#8230;</string>
     <string name="getalbumfailed">获取相册图片失败</string>
     <string name="remove">解除</string>
     <string name="inputusername">请输入对方登录账号(手机号)</string>
   <string name="users">用户数:</string>
    <string name="devicecannotuse">当前设备处于离线状态，按钮不可用</string> 
    <string name="mobilenumberformaterror">要求11位手机号码！</string> 
	<string name="waitforstatus">正在等待智能开关返回状态</string>
	<string name="smssdk_ok">确定</string>
	<string name="smssdk_cancel">取消</string> 
	<string name="devices">状态</string> 
	<string name="statistics">电量</string>
	<string name="fromtime">开始</string>
	<string name="totime">结束</string>
	<string name="go">确定</string>
	<string name="cancel">取消</string> 
	<string name="watt">瓦</string> 
	<string name="select_date">请选择日期</string> 
	<string name="select_time">请选择时间</string> 
	<string name="orderbyConsumption">电量排序</string>
	<string name="orderbyName">名称排序</string> 
	<string name="deviceName">设备名称</string> 
	<string name="statisticsline">电量曲线图</string> 
	<string name="YName">功率(瓦)</string> 
	<string name="XNameHour">最近24小时</string>
	<string name="XNameDay">最近一周</string>
	<string name="XNameMonth">最近一月</string>
	<string name="XNameYear">最近一年</string>
	<string name="dataisempty">数据为空</string>
	<string name="power_now">实时功率</string>
	<string name="power_top">当日峰值</string>
	<string name="power_bottom">当日谷值</string>
</resources>

