<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res/com.dandian.iswitch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:background="@color/white"
        android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/titlebar" >

    <TextView
        android:id="@+id/leftButton"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:background="@drawable/titlebar_button_selector"
        android:clickable="true"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white" />

   <Spinner
       android:id="@+id/spinner1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:entries="@array/timeRanges" />

    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="15dp" >

    	<LinearLayout
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:gravity="center"
    	    android:orientation="vertical" >

    		<com.dandian.iswitch.utility.NumberCircleProgressBar
    		    android:id="@+id/numbercircleprogress_bar1"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:padding="10dp"
    		    android:layout_centerInParent="true"
				custom:max="1000"
				custom:progress="0"
				custom:progress_circle_radius="30dp"
				custom:progress_fill_mode="rising_water"
				custom:progress_reached_color="#33FF66"
				custom:progress_text_color="@android:color/black"
				custom:progress_text_size="13sp"
				custom:progress_text_visibility="visible"
				custom:progress_unreached_color="#CCCCCC" />

    		<TextView
    		    android:id="@+id/tv_now"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/power_now" />

    	</LinearLayout>

    	<LinearLayout
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1"
    	    android:gravity="center"
    	    android:orientation="vertical" >

    		<com.dandian.iswitch.utility.NumberCircleProgressBar
    		    android:id="@+id/numbercircleprogress_bar2"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:padding="10dp"
    		    android:layout_centerInParent="true"
        custom:max="1000"
        custom:progress="0"
        custom:progress_circle_radius="30dp"
        custom:progress_fill_mode="rising_water"
        custom:progress_reached_color="#FF6633"
        custom:progress_text_color="@android:color/black"
        custom:progress_text_size="13sp"
        custom:progress_text_visibility="visible"
        custom:progress_unreached_color="#CCCCCC"  />

    		<TextView
    		    android:id="@+id/tv_top"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/power_top" />

    	</LinearLayout>

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:gravity="center"
		    android:orientation="vertical" >

    		<com.dandian.iswitch.utility.NumberCircleProgressBar
    		    android:id="@+id/numbercircleprogress_bar3"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:padding="10dp"
    		    android:layout_centerInParent="true"
        custom:max="1000"
        custom:progress="0"
        custom:progress_circle_radius="30dp"
        custom:progress_fill_mode="rising_water"
        custom:progress_reached_color="#33CCFF"
        custom:progress_text_color="@android:color/black"
        custom:progress_text_size="13sp"
        custom:progress_text_visibility="visible"
        custom:progress_unreached_color="#CCCCCC" />

    		<TextView
    		    android:id="@+id/tv_bottom"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:text="@string/power_bottom" />

    	</LinearLayout>
    </LinearLayout>
    <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <lecho.lib.hellocharts.view.ColumnChartView
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </lecho.lib.hellocharts.view.ColumnChartView>
	<ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible" />
	</FrameLayout>
</LinearLayout>
